--- a/book.toml
+++ b/book.toml
@@ -10,8 +10,14 @@ edition = "2021"
 
 [output.html]
 mathjax-support = true
+# additional-js = ["context-cards.js", "mermaid-init.js", "mermaid.min.js", "d3.5.16.0.js", "markmap-lib.transform.min.js", "markmap-lib.view.min.js", "markmap-init.js", "quizdown/quizdown.js", "quizdown/quizdown-init.js"]
+# additional-css = ["quizdown/fix.css"]
+# additional-css = ["jsmind.css"]
 
 [output.html.fold]
 enable = true
 level = 1
 
+[preprocessor.toc]
+command = "mdbook-toc"
+renderer = ["html"]
