Refacor command argument building #3

--- a/lectures/build_config.yaml
+++ b/lectures/build_config.yaml
@@ -1,6 +1,8 @@
 self_contained: false
 bibliography: "references.bib"
+citeproc: true
 csl: "../assets/ieee.csl"
-reveal_url: ""
+mathml: true
+reveal_url:
 # reveal_url: "http://127.0.0.1/reveal.js-5.1.0/"
 assets: "../assets"
