Make enable multiple bibtex references #3

--- a/lectures/build_config.yaml
+++ b/lectures/build_config.yaml
@@ -1,5 +1,7 @@
 self_contained: false
-bibliography: "references.bib"
+bibliography:
+    - "references.bib"
+    - "wikipedia.bib"
 citeproc: true
 csl: "../assets/ieee.csl"
 mathml: true
