Add option to exclude markdown files from config #3

--- a/lectures/build_config.yaml
+++ b/lectures/build_config.yaml
@@ -8,3 +8,6 @@ mathml: true
 reveal_url:
 # reveal_url: "http://127.0.0.1/reveal.js-5.1.0/"
 assets: "../assets"
+exclude:
+    - README
+    - SUMMARY
