Update build config #5

--- a/lectures/build_config.yaml
+++ b/lectures/build_config.yaml
@@ -1,12 +1,10 @@
-self_contained: false
+embed_resources: true
 bibliography:
     - "references.bib"
     - "wikipedia.bib"
 citeproc: true
 csl: "../assets/ieee.csl"
 mathml: true
-reveal_url:
-# reveal_url: "http://127.0.0.1/reveal.js-5.1.0/"
 assets: "../assets"
 exclude:
     - README
