Set publish directory to book #5

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,4 +48,4 @@ jobs:
               uses: peaceiris/actions-gh-pages@v4
               with:
                   personal_token: ${{ secrets.PERSONAL_TOKEN }}
-                  publish_dir: ./public
+                  publish_dir: ./book
