Install mdbook manually #5

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,8 +22,11 @@ jobs:
 
             - name: install dependencies
               run: |
-                  sudo apt-get install -y snapd ruby pandoc
-                  sudo snap install mdbook
+                  sudo apt-get install -y ruby pandoc pandoc-citeproc
+                  wget -qO mdbook.tar.gz https://github.com/rust-lang/mdBook/releases/latest/download/mdbook-v0.4.40-x86_64-unknown-linux-gnu.tar.gz
+                  sudo tar xf mdbook.tar.gz -C /usr/local/bin mdbook
+                  mdbook --version
+                  rm -rf mdbook.tar.gz
 
             - name: compile presentaion
               run: |
