--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,7 @@ jobs:
 
             - name: install dependencies
               run: |
-                  sudo apt-get install -y ruby pandoc pandoc-citeproc
+                  sudo apt-get install -y ruby pandoc
                   wget -qO mdbook.tar.gz https://github.com/rust-lang/mdBook/releases/latest/download/mdbook-v0.4.40-x86_64-unknown-linux-gnu.tar.gz
                   sudo tar xf mdbook.tar.gz -C /usr/local/bin mdbook
                   mdbook --version
