Add script to build all slides #5

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,7 +31,7 @@ jobs:
             - name: compile presentaion
               run: |
                   cd lectures
-                  ruby build.rb
+                  ruby build_slides.rb
                   cd ..
 
             - name: compile handout
