--- a/plot/pyproject.toml
+++ b/plot/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.5",
+    "pandas>=2.3.2",
+    "seaborn>=0.13.2",
     "squarify>=0.4.4",
 ]
