--- a/plot/pyproject.toml
+++ b/plot/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.5",
     "pandas>=2.3.2",
+    "pyyaml>=6.0.2",
     "seaborn>=0.13.2",
     "squarify>=0.4.4",
 ]
