Add presentation building script for practicals GH-55

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,6 +33,9 @@ jobs:
                   cd lectures
                   ruby build_slides.rb
                   cd ..
+                  cd practicals
+                  ruby build_slides.rb
+                  cd ..
 
             - name: compile handout
               run: |
